--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <body>
     <h1>RxJS playground</h1>
-    <button id="btn1">Emit "Hello"</button>
-    <button id="btn2">Error</button>
-    <button id="btn3">Complete</button>
-    <button id="btn4">Cancel</button>
-    <button id="btn5">Print Subscription</button>
+    <button id="emit">Emit "hello hello"</button>
+    <button id="error">Error</button>
+    <button id="complete">Complete</button>
+    <button id="cancel">Cancel</button>
+    <button id="print">Print subscription</button>
   </body>
 </html>
